--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -89,7 +89,7 @@ main.class=com.sanms.siso.eft.constantes.SinHilos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
