--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,9 @@ file.reference.netty-all-4.1.46.Final.jar=library/netty-all-4.1.46.Final.jar
 file.reference.slf4j-api-1.7.21.jar=library/slf4j-api-1.7.21.jar
 file.reference.SocketServices.jar=library/SocketServices.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.netty-all-4.1.46.Final.jar}:\
     ${file.reference.CoreServices.jar}:\
@@ -85,7 +87,24 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SimuladorProcesosMC
-main.class=com.sanms.siso.eft.constantes.SinHilos
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=com.sanms.siso.eft.view.ProcesosMC
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
