--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.guava-27.1-android.jar=library/guava-27.1-android.jar
 file.reference.netty-all-4.1.46.Final.jar=library/netty-all-4.1.46.Final.jar
 file.reference.slf4j-api-1.7.21.jar=library/slf4j-api-1.7.21.jar
 file.reference.SocketServices.jar=library/SocketServices.jar
+file.reference.StreamFormat.jar=library\\StreamFormat.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.guava-27.1-android.jar}:\
     ${file.reference.slf4j-api-1.7.21.jar}:\
     ${file.reference.SocketServices.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.StreamFormat.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
