--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SimuladorProcesosMC
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=library/commons-beanutils-1.9.4.jar
+file.reference.commons-cli-1.0.jar=library/commons-cli-1.0.jar
+file.reference.commons-collections-3.2.2.jar=library/commons-collections-3.2.2.jar
+file.reference.commons-collections4-4.2.jar=library/commons-collections4-4.2.jar
+file.reference.commons-digester-2.1.jar=library/commons-digester-2.1.jar
+file.reference.commons-lang-2.1.jar=library/commons-lang-2.1.jar
 file.reference.commons-lang3-3.7.jar=library/commons-lang3-3.7.jar
+file.reference.commons-logging-1.1.1.jar=library/commons-logging-1.1.1.jar
 file.reference.CoreServices.jar=library/CoreServices.jar
 file.reference.gson-2.8.5.jar=library/gson-2.8.5.jar
 file.reference.guava-27.1-android.jar=library/guava-27.1-android.jar
+file.reference.itext-2.1.7.js8.jar=library/itext-2.1.7.js8.jar
+file.reference.jasperreports-6.17.0.jar=library/jasperreports-6.17.0.jar
 file.reference.netty-all-4.1.46.Final.jar=library/netty-all-4.1.46.Final.jar
 file.reference.slf4j-api-1.7.21.jar=library/slf4j-api-1.7.21.jar
 file.reference.SocketServices.jar=library/SocketServices.jar
+file.reference.spring-core-5.3.22.jar=library/spring-core-5.3.22.jar
 file.reference.StreamFormat.jar=library\\StreamFormat.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -55,7 +65,17 @@ javac.classpath=\
     ${file.reference.SocketServices.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
     ${file.reference.StreamFormat.jar}:\
-    ${file.reference.commons-lang3-3.7.jar}
+    ${file.reference.commons-lang3-3.7.jar}:\
+    ${file.reference.spring-core-5.3.22.jar}:\
+    ${file.reference.jasperreports-6.17.0.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-cli-1.0.jar}:\
+    ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-lang-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.itext-2.1.7.js8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
