--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=SimuladorProcesosMC
+application.title=simulador-procesosmc
 application.vendor=salvador
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SimuladorProcesosMC.jar
+dist.jar=${dist.dir}/simulador-procesosmc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/SimuladorProcesosMC
+dist.jlink.output=${dist.jlink.dir}/simulador-procesosmc
 endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.9.4.jar=library/commons-beanutils-1.9.4.jar
@@ -43,14 +43,17 @@ file.reference.commons-digester-2.1.jar=library/commons-digester-2.1.jar
 file.reference.commons-lang-2.1.jar=library/commons-lang-2.1.jar
 file.reference.commons-lang3-3.7.jar=library/commons-lang3-3.7.jar
 file.reference.commons-logging-1.1.1.jar=library/commons-logging-1.1.1.jar
+file.reference.commons-math3-3.6.1.jar=library\\commons-math3-3.6.1.jar
 file.reference.CoreServices.jar=library/CoreServices.jar
 file.reference.gson-2.8.5.jar=library/gson-2.8.5.jar
 file.reference.guava-27.1-android.jar=library/guava-27.1-android.jar
 file.reference.itext-2.1.7.js8.jar=library/itext-2.1.7.js8.jar
 file.reference.jasperreports-6.17.0.jar=library/jasperreports-6.17.0.jar
 file.reference.netty-all-4.1.46.Final.jar=library/netty-all-4.1.46.Final.jar
+file.reference.poi-4.1.2.jar=library/poi-4.1.2.jar
 file.reference.slf4j-api-1.7.21.jar=library/slf4j-api-1.7.21.jar
 file.reference.SocketServices.jar=library/SocketServices.jar
+file.reference.SparseBitSet-1.2.jar=library/SparseBitSet-1.2.jar
 file.reference.spring-core-5.3.22.jar=library/spring-core-5.3.22.jar
 file.reference.StreamFormat.jar=library\\StreamFormat.jar
 includes=**
@@ -71,11 +74,14 @@ javac.classpath=\
     ${file.reference.commons-beanutils-1.9.4.jar}:\
     ${file.reference.commons-cli-1.0.jar}:\
     ${file.reference.commons-collections-3.2.2.jar}:\
+    ${file.reference.SparseBitSet-1.2.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-lang-2.1.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.commons-collections4-4.2.jar}:\
-    ${file.reference.itext-2.1.7.js8.jar}
+    ${file.reference.itext-2.1.7.js8.jar}:\
+    ${file.reference.poi-4.1.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -110,7 +116,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=SimuladorProcesosMC
+jlink.launcher.name=simulador-procesosmc
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
