--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.gson-2.8.5.jar=library/gson-2.8.5.jar
 file.reference.guava-27.1-android.jar=library/guava-27.1-android.jar
 file.reference.itext-2.1.7.js8.jar=library/itext-2.1.7.js8.jar
 file.reference.jasperreports-6.17.0.jar=library/jasperreports-6.17.0.jar
+file.reference.log4j-1.2.16.jar=library\\log4j-1.2.16.jar
 file.reference.netty-all-4.1.46.Final.jar=library/netty-all-4.1.46.Final.jar
 file.reference.poi-4.1.2.jar=library/poi-4.1.2.jar
 file.reference.slf4j-api-1.7.21.jar=library/slf4j-api-1.7.21.jar
@@ -81,7 +82,8 @@ javac.classpath=\
     ${file.reference.commons-collections4-4.2.jar}:\
     ${file.reference.itext-2.1.7.js8.jar}:\
     ${file.reference.poi-4.1.2.jar}:\
-    ${file.reference.commons-math3-3.6.1.jar}
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.log4j-1.2.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
