--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -1,6 +1,6 @@
-# Logger con opción root
-log4j.rootLogger=DEBUG, stdout, file
-log4j.logger.infoLogger=DEBUG
+# Logger con opci\u00c3\u00b3n root
+log4j.rootLogger=INFO, stdout, file
+log4j.logger.infoLogger=INFO
 log4j.additivity.infoLogger = false
 
 # Redirigir mensajes por consola
@@ -12,7 +12,7 @@ log4j.appender.stdout.layout.ConversionPattern=[%d{yyyy-MM-dd HH:mm:ss}] [ %-5p]
 # Redirigir los mensajes a un fichero de texto
 # soportando file rolling
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=avisos.log
+log4j.appender.file.File=log/avisos.log
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
