--- a/transactionSetup/config/templates_PMC.config
+++ b/transactionSetup/config/templates_PMC.config
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <templateSet>
-	<templates> 
+	<templates>
 		<template alias="isoProcesoMC">
-			<bitmapField>3</bitmapField>
+			<bitmapField>2</bitmapField>
 			<fields>
-				<field alias="cabecera">
-					<maxSize>12</maxSize>
-				</field>
 				<field alias="msgType">
 					<format>N</format>
 					<maxSize>4</maxSize>
@@ -31,7 +28,12 @@
 				<field alias="amount">
 					<isobit>4</isobit>
 					<format>N</format>
-					<maxSize>12</maxSize>
+					<maxSize>15</maxSize>
+				</field>
+				<field alias="amountSettlement">
+					<isobit>5</isobit>
+					<format>N</format>
+					<maxSize>10</maxSize>
 				</field>
 				<field alias="txnDate">
 					<isobit>7</isobit>
@@ -63,55 +65,39 @@
 					<format>N</format>
 					<maxSize>4</maxSize>
 				</field>
-				<field alias="settlementDate">
+				<field alias="dateSettlement">
 					<isobit>15</isobit>
 					<format>N</format>
-					<maxSize>4</maxSize>
-				</field>
-				<field alias="captureDate">
-					<isobit>17</isobit>
-					<format>N</format>
+					<varSize>0</varSize>
 					<maxSize>4</maxSize>
 				</field>
 				<field alias="merchantType">
 					<isobit>18</isobit>
 					<format>N</format>
+					<varSize>0</varSize>
 					<maxSize>4</maxSize>
 				</field>
-				<field alias="acqIdCountry">
-					<isobit>19</isobit>
-					<format>N</format>
-					<maxSize>3</maxSize>
-				</field>
-				<field alias="posCaptureCode">
+				<field alias="posEntryMode">
 					<isobit>22</isobit>
 					<format>N</format>
 					<maxSize>3</maxSize>
 				</field>
-				<field alias="cardSequenceNumber">
-					<isobit>23</isobit>
-					<format>N</format>
-					<maxSize>3</maxSize>
-				</field>
-				<field alias="posConditionCode">
-					<isobit>25</isobit>
-					<format>N</format>
-					<maxSize>2</maxSize>
-				</field>
-				<field alias="authIdRespLength">
-					<isobit>27</isobit>
-					<format>N</format>
-					<maxSize>1</maxSize>
-				</field>
 				<field alias="acqId">
 					<isobit>32</isobit>
+					<format>N</format>
 					<varSize>2</varSize>
-					<maxSize>20</maxSize>
+					<maxSize>11</maxSize>
+				</field>
+				<field alias="fwdId">
+					<isobit>33</isobit>
+					<format>N</format>
+					<varSize>2</varSize>
+					<maxSize>11</maxSize>
 				</field>
 				<field alias="track2">
 					<isobit>35</isobit>
 					<varSize>2</varSize>
-					<maxSize>40</maxSize>
+					<maxSize>37</maxSize>
 				</field>
 				<field alias="referenceNumber">
 					<isobit>37</isobit>
@@ -119,15 +105,17 @@
 				</field>
 				<field alias="authCode">
 					<isobit>38</isobit>
+					<format>N</format>
 					<maxSize>6</maxSize>
 				</field>
 				<field alias="respCode">
 					<isobit>39</isobit>
+					<format>N</format>
 					<maxSize>2</maxSize>
 				</field>
 				<field alias="terminal">
 					<isobit>41</isobit>
-					<maxSize>16</maxSize>
+					<maxSize>8</maxSize>
 				</field>
 				<field alias="acceptorId">
 					<isobit>42</isobit>
@@ -137,166 +125,104 @@
 					<isobit>43</isobit>
 					<maxSize>40</maxSize>
 				</field>
-				<field alias="additionalResp">
-					<isobit>44</isobit>
-					<varSize>2</varSize>
-					<maxSize>99</maxSize>
-				</field>
-				<field alias="addData">
+				<field alias="addDataPrivate">
 					<isobit>48</isobit>
 					<varSize>3</varSize>
-					<maxSize>999</maxSize>
+					<maxSize>100</maxSize>
 				</field>
 				<field alias="currencyCode">
 					<isobit>49</isobit>
 					<format>N</format>
 					<maxSize>3</maxSize>
 				</field>
+				<field alias="currencyCodeSettlement">
+					<isobit>50</isobit>
+					<format>N</format>
+					<maxSize>3</maxSize>
+				</field>
 				<field alias="pin">
 					<isobit>52</isobit>
-					<maxSize>16</maxSize>
-				</field>
-				<field alias="securityInfo">
-					<isobit>53</isobit>
 					<format>N</format>
 					<maxSize>16</maxSize>
 				</field>
 				<field alias="additionalAmounts">
 					<isobit>54</isobit>
-					<format>N</format>
+					<varSize>3</varSize>
+					<maxSize>120</maxSize>
+				</field>
+				<field alias="iccData">
+					<isobit>55</isobit>
 					<varSize>3</varSize>
 					<maxSize>999</maxSize>
 				</field>
-				<field alias="expandedTokenBuffer">
-					<isobit>57</isobit>
-					<format>N</format>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="terminalData">
-					<isobit>60</isobit>
-					<varSize>3</varSize>
-					<maxSize>20</maxSize>
-				</field>
-				<field alias="cardAuthData">
-					<isobit>61</isobit>
-					<varSize>3</varSize>
-					<maxSize>21</maxSize>
-				</field>
-				<field alias="posAditionalData">
+				<field alias="networkData">
 					<isobit>63</isobit>
 					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="primMAC">
-					<isobit>64</isobit>
-					<maxSize>16</maxSize>
+					<maxSize>12</maxSize>
 				</field>
 				<field alias="netManagCode">
 					<isobit>70</isobit>
 					<format>N</format>
+					<varSize>0</varSize>
 					<maxSize>3</maxSize>
 				</field>
 				<field alias="originalData">
 					<isobit>90</isobit>
 					<maxSize>42</maxSize>
 				</field>
-				<field alias="replacementAmounts">
-					<isobit>95</isobit>
-					<maxSize>42</maxSize>
-				</field>
-				<field alias="receivingInstCode">
-					<isobit>100</isobit>
-					<varSize>2</varSize>
-					<maxSize>11</maxSize>
-				</field>
 				<field alias="accountIde1">
 					<isobit>102</isobit>
 					<varSize>2</varSize>
-					<maxSize>28</maxSize>
+					<maxSize>40</maxSize>
 				</field>
-				<field alias="accountIde2">
+				<field alias="accountNum2">
 					<isobit>103</isobit>
 					<varSize>2</varSize>
-					<maxSize>28</maxSize>
+					<maxSize>40</maxSize>
 				</field>
-				<field alias="atmAddress">
+				<field alias="addData">
+					<isobit>112</isobit>
+					<varSize>0</varSize>
+					<maxSize>100</maxSize>
+				</field>
+				<field alias="custInfoResponse">
 					<isobit>120</isobit>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="posAddress">
-					<isobit>121</isobit>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="cafPosSegmentInfo">
-					<isobit>122</isobit>
-					<format>N</format>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="posData">
-					<isobit>123</isobit>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="depositoryTape">
-					<isobit>124</isobit>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="statePrintData">
-					<isobit>125</isobit>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="appData1">
-					<isobit>126</isobit>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="posUserData">
-					<isobit>127</isobit>
-					<varSize>3</varSize>
-					<maxSize>999</maxSize>
-				</field>
-				<field alias="secMAC">
-					<isobit>128</isobit>
-					<maxSize>16</maxSize>
+					<varSize>4</varSize>
+					<maxSize>1800</maxSize>
 				</field>
 			</fields>
 		</template>
-		<template alias="reqDE090OriginalData">
+		<template alias="reqB90OriginalData">
 			<fields>
 				<field alias="msgType">
 					<format>N</format>
 					<maxSize>4</maxSize>
 				</field>
-				<field alias="referenceNumber">
+				<field alias="trace">
+					<isobit>11</isobit>
 					<format>N</format>
-					<maxSize>12</maxSize>
+					<maxSize>6</maxSize>
 				</field>
 				<field alias="localDate">
+					<isobit>12</isobit>
 					<format>N</format>
 					<maxSize>4</maxSize>
 				</field>
 				<field alias="localTime">
+					<isobit>13</isobit>
 					<format>N</format>
 					<maxSize>6</maxSize>
 				</field>
-				<field alias="localTimeExtra">
-					<format>N</format>
-					<maxSize>2</maxSize>
+				<field alias="acqId">
+					<isobit>32</isobit>
+					<maxSize>11</maxSize>
 				</field>
-				<field alias="captureDate">					
-					<maxSize>4</maxSize>
-				</field>
-				<field alias="filler">					
-					<maxSize>10</maxSize>
+				<field alias="fwdId">
+					<isobit>33</isobit>
+					<maxSize>11</maxSize>
 				</field>
 			</fields>
-		</template>  
-		
-	</templates>	
+		</template>
+		<!-- REQ* -->
+	</templates>
 </templateSet>
