--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=POS-simulator
+application.title=pos-simulator
 application.vendor=salvador
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/POS-simulator.jar
+dist.jar=${dist.dir}/pos-simulator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/POS-simulator
+dist.jlink.output=${dist.jlink.dir}/pos-simulator
 endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.9.4.jar=library/commons-beanutils-1.9.4.jar
@@ -118,7 +118,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=POS-simulator
+jlink.launcher.name=pos-simulator
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
